--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-mathjax": "^1.0.1",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "recharts": "^2.0.0-beta.1"
   },
   "scripts": {
