--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "csv-reader": "^1.0.6",
     "react": "^16.12.0",
+    "react-autosuggest": "^10.0.2",
     "react-dom": "^16.12.0",
     "react-mathjax": "^1.0.1",
     "react-scripts": "^3.4.1",
