--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "csv-reader": "^1.0.6",
+    "ramda": "^0.27.0",
     "react": "^16.12.0",
     "react-autosuggest": "^10.0.2",
     "react-dom": "^16.12.0",
@@ -14,6 +15,7 @@
     "react-scripts": "^3.4.1",
     "recharts": "^2.0.0-beta.1"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -36,8 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "ramda": "^0.27.0"
   }
 }
